--- a/P005389.opf/layers/v001/Pagination.yml
+++ b/P005389.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: e61fa9136dc3454eaec8b586475647d5
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   dd59016512384eac86b9f71df516985b:
